tests/execution_spec/snapshots/execution_spec__cors-invalid-methods.md_errors.snap
---
source: tests/execution_spec.rs
expression: errors
---
[
  {
    "message": "Invalid CORS configuration: Cannot combine `Access-Control-Allow-Credentials: true` with `Access-Control-Allow-Methods: *`",
    "trace": [
      "schema",
      "@server",
      "headers",
      "cors"
    ],
    "description": null
  }
]
