tests/execution_spec/snapshots/execution_spec__custom-headers.md_test_0.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json",
    "x-id": "1",
    "x-name": "John Doe"
  },
  "body": {
    "data": {
      "greet": "Hello World!"
    }
  }
}
