tests/execution_spec/snapshots/execution_spec__inline-field.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @server @upstream {
  query: Query
}

type Address {
  geo: Geo
}

type Geo {
  lat: String
}

type Query {
  user: User @http(baseURL: "http://jsonplaceholder.typicode.com", path: "/users/1")
}

type User @addField(name: "address", path: ["address", "geo", "lat"]) {
  address: Address @modify(omit: true)
}
