tests/execution_spec/snapshots/execution_spec__inline-many-list.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
scalar Date

scalar Email

scalar Empty

scalar JSON

scalar PhoneNumber

type Query {
  u: U
}

type U {
  b: [String]
  c: String
  d: String
  e: String
}

scalar Url

schema {
  query: Query
}
